--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
+*{
+  margin: 0; padding: 0; box-sizing: border-box;
+}
+li{
+  list-style: none;
+}
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  padding: 20px;
+  border-bottom: 1px solid #ccc;
+
+}
+
+.header.dark{
+  background: black;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header ul{
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header li{
+  padding: 0 20px;
 }
+
+.content{
+  height: 700px;
+  padding-top: 100px;
+}
+.content.dark{
+  background-color: #666;
+  color: #fff;
+}
+
+.footer{
+  border-top: 1px solid #ccc;
+  padding: 30px;
+  height: 100px;
+}
+.footer.dark{
+  background-color: #333;
+  color: #fff;
+}
+
+.footer button{
+  outline: none;
+  padding: 10px 20px;
+  float: right;
+}
+
+.footer.dark button{
+  background-color: #eee;
+}
+
